Bug 1355259 - Only filter out udp candidates if force_tcp is set. r=mjf, a=gchang

MozReview-Commit-ID: AKv0N74epZ1